syntax = "proto3";

package onight.zjfae.afront.gens.v3;
option java_outer_classname="PrdQueryTaUnitFinanceNewPb";

//Generated By BrewRobot:Tue Mar 07 18:30:30 CST 2017

message PBIFE_prdquery_prdQueryTaUnitFinanceNew{
	///ife/prdquery/prdQueryTaUnitFinanceNew.html

	message IconsList{
		string iconsPosition = 1;	 //,图标具体方位,String,不校验,是,
		string uuid = 2;	 //,图标uuid,String,不校验,是,
	}

	message PageInfo{
		string pageSize = 1;	 //,页大小,String,不校验,是,
		string pageIndex = 2;	 //,当前页,String,不校验,是,
		string pageCount = 3;	 //,总页数,String,不校验,是,
		string totalCount = 4;	 //,总条数,String,不校验,是,
	}

	message TaUnitFinanceList{
		string id = 1;	 //,编号,String,不校验,是,
		string productCode = 2;	 //,产品编号,String,不校验,是,
		string unit = 3;	 //,本金,String,不校验,是,
		string canTransferAmount = 4;	 //,可转让本金,String,不校验,是,
		string noTransferAmount = 5;	 //,不可转让本金,String,不校验,是,
		string freeze = 6;	 //,冻结资产,String,不校验,是,
		string expectedMaxAnnualRate = 7;	 //,预期收益率,String,不校验,是,
		string statusStr = 8;	 //,产品状态,String,不校验,是,
		string productName = 9;	 //,产品名称,String,不校验,是,
		string leftDays = 10;	 //,已持有天数,String,不校验,是,
		string ifCanTransfer = 11;	 //,是否可以转让,String,不校验,是,
		string preProfit = 12;	 //,持有期预计收益,String,不校验,是,
		string manageEndDate = 13;	 //,结息日,String,不校验,是,
		string isTransfer = 14;	 //,是否可转让交易,String,不校验,是,
		string ifTimeChoose = 15;	 //,是否期限选择,String,不校验,是,
		string ifCanCancel = 16;	 //,是否可以撤销,String,不校验,是,
		string surplusHoldDays = 17;	 //,剩余天数,String,不校验,是,
		string intervalEndDate = 18;	 //,选择期所在付息计划结束日,String,不校验,是,
		string nextEndDate = 19;	 //,下一到期日,String,不校验,是,

		string managerShortname = 20; //,基金管理人,String,不校验,是,
		string contactsNumber = 21;//,基金管理人联系方式,String,不校验,是,
		string productType = 22; //,基金,String,不校验,是,

		string whiteGroup = 23;//,白名单组

		message IconsList{
			string iconsPosition = 1;		 //,图标具体方位,String,不校验,是,
			string uuid = 2;		 //,图标uuid,String,不校验,是,
		}

		repeated IconsList iconsList = 24;

		string unitDate = 25;//  ,持仓日期：yyyy-MM-dd,String,不校验,是,

		string tradeEndDate = 26;//  ,到期日期：yyyy-MM-dd,String,不校验,是,

		string tradeStartDate = 27;//  ,起息日期：yyyy-MM-dd,String,不校验,是,

		string isWholeTransfer =28;  //（是否整体转让：1:整体 0:拆分）

		string interestByTimeRange =29;  //（分时段气息：1:是 0:否）
	}


	repeated TaUnitFinanceList taUnitFinanceList = 1; //,TaUnitFinanceSimplify列表,List,不校验,是,


	PageInfo pageInfo = 2; //,分页信息,PageInfo,不校验,是,

	string sumPreProfit = 3; //,sumPreProfit,String,不校验,是,



}

message Ret_PBIFE_prdquery_prdQueryTaUnitFinanceNew{
	///ife/prdquery/prdQueryTaUnitFinanceNew.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdquery_prdQueryTaUnitFinanceNew data=3;


}

message REQ_PBIFE_prdquery_prdQueryTaUnitFinanceNew{
	///ife/prdquery/prdQueryTaUnitFinanceNew.html

	string pageIndex = 1; //,当前页,String,不校验,否,

	string pageSize = 2; //,页大小,String,不校验,否,

	string startDate = 3; //,开始日期,String,不校验,否,

	string endDate = 4; //,结束日期,String,不校验,否,

	string version = 5; //,版本号,String,不校验,否,1.0.1（默认1.0.0版本）

	string orderBy = 6; //,排序,String,不校验,是,

	string orderAsc = 7; //,升降序,String,不校验,是,0-升序1-降序

	string uuids = 8; //,排序控件,String,不校验,是,用-分隔


}